--- a/SensorUnlock/packages.config
+++ b/SensorUnlock/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Coding4Fun.Toolkit.Controls" version="2.1.6" targetFramework="wpa81" />
   <package id="ColorPicker" version="1.0.2" targetFramework="wpa81" />
 </packages>
