Get color picker unlock working.

--- a/SensorUnlock/SensorUnlock.csproj
+++ b/SensorUnlock/SensorUnlock.csproj
@@ -100,6 +100,7 @@
     <Content Include="Assets\StoreLogo.scale-240.png" />
     <Content Include="Assets\WideLogo.scale-240.png" />
     <Content Include="ReadMe.Coding4Fun.Toolkit.txt" />
+    <Content Include="unlocked_shot.jpg" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
