--- a/TouchUnlock/TouchUnlock.csproj
+++ b/TouchUnlock/TouchUnlock.csproj
@@ -101,6 +101,7 @@
     <Content Include="Assets\WideLogo.scale-240.png" />
     <Content Include="padlock21.png" />
     <Content Include="ReadMe.Coding4Fun.Toolkit.txt" />
+    <Content Include="unlocked_shot.jpg" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
