--- a/SensorUnlock/SensorUnlock.csproj
+++ b/SensorUnlock/SensorUnlock.csproj
@@ -99,6 +99,7 @@
     <Content Include="Assets\Square71x71Logo.scale-240.png" />
     <Content Include="Assets\StoreLogo.scale-240.png" />
     <Content Include="Assets\WideLogo.scale-240.png" />
+    <Content Include="fingerprint.jpg" />
     <Content Include="ReadMe.Coding4Fun.Toolkit.txt" />
     <Content Include="unlocked_shot.jpg" />
   </ItemGroup>
